--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "firebase": "^4.8.0",
     "gsap": "^1.20.3",
     "meteor-node-stubs": "^0.3.2",
     "prop-types": "^15.6.0",
